kubernetes-manifest/namespace.yml
# create a namespace
apiVersion: v1
kind: Namespace
metadata: 
    name: to-do-app
