kubernetes-manifest/backend-deployment.yml
# configure deployment for backend and frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-app-backend
  namespace: to-do-app
spec:
  replicas: 3
  selectors:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      name: to-do-app-backend
      labels:
        app: to-do-app
    spec:
      containers:
        - name: backend
          image: to-do-backend:latest
          ports:
            - containerPort: 3001
