kubernetes-manifest/frontend-deployment.yml
# configure frontend for deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: to-do-app-frontend
  namespace: to-do-app
spec:
  replicas: 2
  selectors:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      name: to-do-app-frontend
      labels:
        app: to-do-app
    spec:
      containers:
        - name: frontend-container
          image: to-do-app-frontend:latest
          ports:
            - containerPort: 80
