kubernetes-manifest/mongo-deployment.yml
# configure mongo-deployment file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: to-do-app
spec:
  replicas: 1
  selectors:
    matchLabels:
      app: to-do-app
  template:
    metadata:
      name: mongo-deployment
      labels:
        app: to-do-app
    spec:
      containers:
        - name: mongo-container
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMount:
            - name: mongo-volume
              mountPath: /data/db
  volumes:
    - name: mongo-volume
      perisitentVolumeClaim:
        claimName: mongo-pvc
