kubernetes-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: to-do-app
spec:
  rules:
  - host: todo.local
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3001

        - path: /api
          pathType: Prefix
          frontend:
            service:
              - name: frontend-service
                port:
                  number: 80
